--- a/main.css
+++ b/main.css
@@ -10,23 +10,28 @@ html {
   background-color: hsl(30, 54%, 90%);
 }
 .main {
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 45px;
+  padding-right: 45px;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: hsl(0, 0%, 100%);
   color: hsl(30, 10%, 34%);
-  width: 50%;
+  width: 45%;
+  max-height: fit-content;
   justify-content: center;
   align-items: center;
   display: flex;
   border-radius: 20px;
   margin-top: 100px;
   margin-left: 25%;
-  max-height: fit-content;
   flex-direction: column;
 }
 h1 {
   color: hsl(24, 5%, 18%);
   margin-right: 50%;
+ 
+}
+
+.image {
+  border-radius: 15px;
 }
