--- a/main.css
+++ b/main.css
@@ -1,3 +1,63 @@
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Regular.ttf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-ExtraBold.ttf');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Light.ttf');
+  font-weight: 300;
+  font-style: normal;
+  }
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-SemiBold.ttf');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Medium.ttf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Bold.ttf');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Black.ttf');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-Thin.ttf');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Young Serif', serif;
+  src: url('assets/fonts/outfit/static/Outfit-ExtraLight.ttf');
+  font-weight: 200;
+  font-style: normal;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
