--- a/main.css
+++ b/main.css
@@ -1,59 +1,65 @@
-@font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Regular.ttf');
-  font-weight: 400;
-  font-style: normal;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-ExtraBold.ttf');
+  font-family: "Young Serif 1";
+  src: url("assets/fonts/outfit/static/Outfit-ExtraBold.ttf");
   font-weight: 800;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Light.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Light.ttf");
   font-weight: 300;
   font-style: normal;
-  }
+}
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-SemiBold.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-SemiBold.ttf");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Medium.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Medium.ttf");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Bold.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Bold.ttf");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Black.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Black.ttf");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-Thin.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-Thin.ttf");
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Young Serif', serif;
-  src: url('assets/fonts/outfit/static/Outfit-ExtraLight.ttf');
+  font-family: "Young Serif";
+  src: url("assets/fonts/outfit/static/Outfit-ExtraLight.ttf");
   font-weight: 200;
   font-style: normal;
 }
@@ -70,28 +76,35 @@ html {
   background-color: hsl(30, 54%, 90%);
 }
 .main {
-  padding-left: 45px;
-  padding-right: 45px;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-top: 35px;
+  padding-bottom: 35px;
+  margin-top: 100px;
+  margin-left: 25%;
   background-color: hsl(0, 0%, 100%);
   color: hsl(30, 10%, 34%);
-  width: 45%;
+  width: 42%;
   max-height: fit-content;
   justify-content: center;
   align-items: center;
-  display: flex;
+  /* display: flex; */
   border-radius: 20px;
-  margin-top: 100px;
-  margin-left: 25%;
   flex-direction: column;
 }
+
 h1 {
   color: hsl(24, 5%, 18%);
-  margin-right: 50%;
- 
+  font-family: "Young Serif";
+  font-weight: 800;
+  font-style: normal;
+  border: 1px solid black;
+  margin-bottom: 32px;
 }
 
 .image {
   border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 35px;
 }
