--- a/main.css
+++ b/main.css
@@ -25,10 +25,7 @@ html {
 }
 
 .main {
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 35px;
-  padding-bottom: 35px;
+  padding: 35px 35px;
   margin-top: 100px;
   margin-left: 25%;
   background-color: hsl(0, 0%, 100%);
