--- a/main.css
+++ b/main.css
@@ -10,6 +10,61 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-Thin.ttf");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-ExtraLight.ttf");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-Light.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-Medium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-SemiBold.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-Bold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Outfit";
+  src: url("assets/fonts/outfit/static/Outfit-ExtraBold.ttf");
+  font-weight: 800;
+  font-style: normal;
+}
+
 
 .attribution {
   font-size: 11px;
@@ -33,13 +88,12 @@ html {
   width: 42%;
   max-height: fit-content;
   border-radius: 20px;
- 
 }
 .image {
   border-radius: 15px;
   width: 100%;
   height: 100%;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 }
 
 h1 {
@@ -47,31 +101,37 @@ h1 {
   font-family: "Young Serif";
   font-weight: 400;
   font-style: normal;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
+  font-size: 32px;
 }
 
 .description {
-  font-family: "Young Serif";
-  font-weight: 100;
+  font-family: "Outfit";
+  font-weight: 300;
   font-style: normal;
-  margin-bottom: 30px;
-  font-size: 12px;
+  margin-bottom: 27px;
+  font-size: 16px;
+  line-height: 1.5;
 }
+
 .preparation-container{
-  border: 1px solid black;
   background-color: #fdf6fa;
   border-radius: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
- 
 }
-.preparation-title{
-  margin-left: 20px;
-  
-}
-.preparation-list{
-  margin-left: 40px;
 
+.preparation-title{
+  margin-left: 25px; 
+}
+
+.preparation-list{
+  margin-left: 50px;
+}
+strong{
+  font-family: "Outfit";
+  font-weight: 600;
+  font-style: normal;
 }
 
 h3 {
