--- a/main.css
+++ b/main.css
@@ -65,7 +65,6 @@
   font-style: normal;
 }
 
-
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -96,13 +95,17 @@ html {
   margin-bottom: 30px;
 }
 
-h1 {
+h1, h2 {
   color: hsl(24, 5%, 18%);
   font-family: "Young Serif";
   font-weight: 400;
   font-style: normal;
   margin-bottom: 13px;
-  font-size: 32px;
+  font-size: 34px;
+}
+h2 {
+ color:  hsl(14, 45%, 36%);
+ font-size: 30px;
 }
 
 .description {
@@ -114,21 +117,22 @@ h1 {
   line-height: 1.5;
 }
 
-.preparation-container{
+.preparation-container {
   background-color: #fdf6fa;
   border-radius: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
-.preparation-title{
-  margin-left: 25px; 
+.preparation-title {
+  margin-left: 25px;
 }
 
-.preparation-list{
+.preparation-list {
   margin-left: 50px;
 }
-strong{
+
+.bold {
   font-family: "Outfit";
   font-weight: 600;
   font-style: normal;
@@ -141,3 +145,5 @@ h3 {
   font-style: normal;
   margin-bottom: 15px;
 }
+
+
