--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -84,7 +84,7 @@ html {
   margin-left: 25%;
   background-color: hsl(0, 0%, 100%);
   color: hsl(30, 10%, 34%);
-  width: 42%;
+  width: 50%;
   max-height: fit-content;
   border-radius: 20px;
 }
@@ -115,6 +115,8 @@ h2 {
   margin-bottom: 27px;
   font-size: 16px;
   line-height: 1.5;
+  /* width: 70ch; */
+ 
 }
 
 .preparation-container {
@@ -122,6 +124,7 @@ h2 {
   border-radius: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
+  margin-bottom: 30px;
 }
 
 .preparation-title {
@@ -140,8 +143,8 @@ h2 {
 
 h3 {
   color: hsl(332, 51%, 32%);
-  font-family: "Young Serif";
-  font-weight: 400;
+  font-family: "Outfit";
+  font-weight: 700;
   font-style: normal;
   margin-bottom: 15px;
 }
