--- a/main.css
+++ b/main.css
@@ -106,6 +106,7 @@ h1, h2 {
 h2 {
  color:  hsl(14, 45%, 36%);
  font-size: 30px;
+ margin-bottom: 20px;
 }
 
 .description {
@@ -115,8 +116,6 @@ h2 {
   margin-bottom: 27px;
   font-size: 16px;
   line-height: 1.5;
-  /* width: 70ch; */
- 
 }
 
 .preparation-container {
@@ -147,6 +146,13 @@ h3 {
   font-weight: 700;
   font-style: normal;
   margin-bottom: 15px;
+}
+.ingredients-list {
+  margin-left: 25px;
+  font-family: "Outfit";
+  font-weight: 300;
+  font-style: normal;
+  margin-bottom: 20px;
 }
 
 
