--- a/main.css
+++ b/main.css
@@ -152,7 +152,11 @@ h3 {
   font-family: "Outfit";
   font-weight: 300;
   font-style: normal;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
+}
+hr {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 
