Refactor index.html and main.css: Add class to instructions paragraph for styling, and adjust margins and alignment for instructions list and text to enhance visual clarity and layout consistency.

--- a/main.css
+++ b/main.css
@@ -162,11 +162,12 @@ hr {
 
 .instructions-list {
   border: 1px solid red;
- 
+  margin-left: 20px;
+  align-content: center;
+
 }
 
 .instructions-text {
   border: 1px solid blue;
-  
+  margin-left: 20px;
 }
-
