--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -95,7 +95,8 @@ html {
   margin-bottom: 30px;
 }
 
-h1, h2 {
+h1,
+h2 {
   color: hsl(24, 5%, 18%);
   font-family: "Young Serif";
   font-weight: 400;
@@ -104,9 +105,9 @@ h1, h2 {
   font-size: 34px;
 }
 h2 {
- color:  hsl(14, 45%, 36%);
- font-size: 30px;
- margin-bottom: 20px;
+  color: hsl(14, 45%, 36%);
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
 .description {
@@ -152,22 +153,46 @@ h3 {
   font-family: "Outfit";
   font-weight: 300;
   font-style: normal;
-
 }
 hr {
   margin-top: 30px;
   margin-bottom: 30px;
- 
 }
 
 .instructions-list {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin-left: 20px;
   align-content: center;
-
+  /* margin-bottom: 20px; */
 }
 
 .instructions-text {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   margin-left: 20px;
+}
+.nutrition-p {
+  margin-bottom: 20px;
+}
+
+.nutrition-list {
+  border: 1px solid red;
+  list-style: none;
+}
+
+.nutrition-list-row {
+  border: 1px solid green;
+  display: flex;
+  padding-block: 5px;
+}
+.nutrition-item {
+  width: 50%;
+  font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
+  font-weight: 300;
+  font-style: normal;
+}
+
+.nutrition-value {
+  font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
+  font-weight: 600;
+  color: hsl(14, 45%, 36%);
 }
