Refactor index.html and main.css: Update nutrition section by replacing repeated calorie entries with distinct nutritional values (Carbs, Protein, Fat) and add horizontal rules for better separation. Adjust CSS for nutrition list margin to enhance layout consistency.

--- a/main.css
+++ b/main.css
@@ -160,16 +160,14 @@ hr {
 }
 
 .instructions-list {
-  /* border: 1px solid red; */
   margin-left: 20px;
   align-content: center;
-  /* margin-bottom: 20px; */
 }
 
 .instructions-text {
-  /* border: 1px solid blue; */
   margin-left: 20px;
 }
+
 .nutrition-p {
   margin-bottom: 20px;
 }
@@ -177,6 +175,7 @@ hr {
 .nutrition-list {
   border: 1px solid red;
   list-style: none;
+  margin-left: 30px;
 }
 
 .nutrition-list-row {
@@ -184,6 +183,7 @@ hr {
   display: flex;
   padding-block: 5px;
 }
+
 .nutrition-item {
   width: 50%;
   font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
