Update main.css: Add font styling to body for improved typography and consistency across the application.

--- a/main.css
+++ b/main.css
@@ -78,7 +78,9 @@ html {
   background-color: hsl(30, 54%, 90%);
 }
 body {
- 
+ font-family: "Outfit";
+ font-weight: 300;
+ font-style: normal;
 }
 
 .main {
