--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ html {
   background-color: hsl(30, 54%, 90%);
 }
 body {
- font-family: "Outfit";
+  font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
  font-weight: 300;
  font-style: normal;
 }
