--- a/main.css
+++ b/main.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 @font-face {
   font-family: "Young Serif";
   src: url("assets/fonts/young-serif/YoungSerif-Regular.ttf");
@@ -65,13 +59,10 @@
   font-style: normal;
 }
 
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -80,12 +71,12 @@ html {
 
 body {
   font-family: "Outfit", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
- font-weight: 300;
- font-style: normal;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .main {
-  padding: 35px 35px;
+  padding: 25px;
   margin-top: 100px;
   margin-left: 25%;
   background-color: hsl(0, 0%, 100%);
@@ -143,7 +134,7 @@ h2 {
 }
 
 ul.preparation-list li::marker {
-  color:hsl(332, 51%, 32%);   
+  color: hsl(332, 51%, 32%);
 }
 
 .bold {
@@ -168,12 +159,12 @@ h3 {
 }
 
 ul.ingredients-list li::marker {
-  color:hsl(14, 45%, 36%);  
+  color: hsl(14, 45%, 36%);
 }
 
 hr {
   height: 1px;
-  background-color:  hsl(30, 18%, 87%);
+  background-color: hsl(30, 18%, 87%);
   border: none;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -184,12 +175,12 @@ hr {
 }
 
 ol.instructions-list li::marker {
-  color:hsl(14, 45%, 36%); 
+  color: hsl(14, 45%, 36%);
   font-family: "Outfit";
   font-weight: 600;
 }
 
-li{
+li {
   padding-left: 20px;
 }
 
@@ -223,4 +214,18 @@ li{
   margin-top: 10px;
   margin-bottom: 10px;
 }
- 
+
+@media screen and (max-width: 425px) {
+  main{
+    border: 1px solid red;
+    width: 100%;
+    /* padding: 25px;
+    margin-top: 100px;
+    margin-left: 25%;
+    background-color: hsl(0, 0%, 100%);
+    color: hsl(30, 10%, 34%);
+    width: 50%;
+    max-height: fit-content;
+    border-radius: 20px; */
+  }
+}
