--- a/main.css
+++ b/main.css
@@ -216,7 +216,7 @@ li {
 }
 
 @media screen and (max-width: 425px) {
-  main{
+  .main{
     border: 1px solid red;
     width: 100%;
     /* padding: 25px;
