--- a/main.css
+++ b/main.css
@@ -219,13 +219,10 @@ li {
   .main{
     border: 1px solid red;
     width: 100%;
-    /* padding: 25px;
-    margin-top: 100px;
-    margin-left: 25%;
+    margin-top: 0;
     background-color: hsl(0, 0%, 100%);
     color: hsl(30, 10%, 34%);
-    width: 50%;
     max-height: fit-content;
-    border-radius: 20px; */
+    border-radius: 0;
   }
 }
