--- a/main.css
+++ b/main.css
@@ -226,3 +226,14 @@ li {
     border-radius: 0;
   }
 }
+
+@media screen and (max-width: 375px) {
+  .main {
+    width: 100%;
+  }
+  .image {
+    border: 1px solid red;
+    border-radius: 0;
+   
+  }
+}
